-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Security
-
Fully Compatible
-
ALL
-
Security 2018-10-08, Security 2018-10-22
-
None
-
None
-
None
-
None
-
None
-
None
-
None
A pointer field is not initialized in the constructor
Defect 105062 (STATIC_C)
Checker UNINIT_CTOR (subcategory pointer)
File: /src/mongo/db/auth/authorization_manager_impl.cpp
Function mongo::<unnamed>::PinnedUserSetParameter::PinnedUserSetParameter()
/src/mongo/db/auth/authorization_manager_impl.cpp, line: 217
Class member declaration for "_authzManager".
AuthorizationManager* _authzManager;
/src/mongo/db/auth/authorization_manager_impl.cpp, line: 121
Non-static class member "_authzManager" is not initialized in this constructor nor in any functions that it calls.
ServerParameterSet::getGlobal(), "authorizationManagerPinnedUsers", true, true) {}