SERVER-37485 Ensure pointer is default-intialized to nullptr